package sofa.pbrpc.test;
option cc_generic_services = true;
message TestPair {
    optional string id = 1;
    optional string value = 2;
}

message Result {
    optional int32 index = 1;
    optional string data = 2;
}

message Request {
    optional string debug_message = 1;
    repeated TestPair pair = 2;
}

message Response {
    optional string debug_message = 1;
    repeated Result result = 2;
}

service TestService {
    rpc test_func(Request) returns (Response);
}

